pkg/check/testdata/ub/types/valid/defaulted-reference-inputs.ub
resources: {
  bucket: ext.bucket {
    name: 'defaulted references'
  }
}
