pkg/check/testdata/ub/types/invalid/null-list-input.ub
resources: {
  bucket: ext.bucket {
    name: 'bad items'
    tags: {}
    items: null
  }
}
